bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: type mismatch;
 found   : Int(111)
 required: Boolean
  if ((89<n<111)||(189<n<211)) return true
            ^NearHundred:2: error: type mismatch;
 found   : Int(211)
 required: Boolean
  if ((89<n<111)||(189<n<211)) return true
                         ^